	  to build it first.
	* arch/arm/src/lpc17xx/lpc17_syscon.h:  Correct some typos in bit
	  definitions (from Rommel Marcelo).
	* libc/string/lib_strndup.c: strndup() should use strnlen(), not
	  strlen(), to determine the size of the string.
	* sched/os_bringup.c:  Remove support for CONFIG_BUILTIN_APP_START.
	  This is not really a useful feature and creates a violation of the
	  OS layered architecture.
	* include/unistd.h, arch/arch/src/*:  Implement a simple vfork().
	  On initial checkin, this API is available only for ARM platforms.
	* binfmt/binfmt_exec.c: exec() now sets the priority of the new task
	  to the same priority as the current task (instead of the arbirtrary
	  value of 50).
	* libc/unisted/lib_execv.c and lib_execl.c:  New, somewhat flawed,
	  implementations of execv() and execl().
	* tools/cfgdefine.c:  Strips quotes from CONFIG_EXECFUNCS_SYMTAB
	  value.
	* arch/arm/include/lm3s/chip.h:  Move chip definitions into
	  public include area for compatibility with other architectures.
	* arch/arm/src/lm3s/chip:  Move register definition header files
	  into a new chip/ sub-directory.
	* arch/arm/src/lm3s/lm3s_internal.h:  Broke up into several
	  smaller header files.
	* arch/arm/src/lm:  Rename the arch/arm/src/lm3s directory to
	  arch/arm/src/lm so that is can support other members of the
	  Stellaris family.
	* libc/spawn:  Add file action interfaces needed by posix_spawn().
	* sched/clock_time2ticks.c:  Another case where time was being
	  rounded down instead of up (from Mike Smith).
	* libc/spawn:  Implementation of posix_spawn() is complete but
	  untested and undocumented.
	* drivers/usbdev/pl2303.c:  Fix typols in the PL2303 driver
	  (from Max Holtzberg).
	* configs/stm32f4discovery/posix_spawn:  Added a configuration
	  that can be used for testing posix_spawn().
	* arch/arm/src/stm32: Bring F1 support for general DMA and serial
	  DMA in paricular up to parity with F2/F4 (from Mike Smith).
