@@ -301,9 +301,10 @@ ssize_t lib_fread(FAR void *ptr, size_t count, FAR FILE *stream)
         {
           stream->fs_flags |= __FS_FLAG_EOF;
         }
+
+      lib_give_semaphore(stream);
     }
 
-  lib_give_semaphore(stream);
   return bytes_read;  
 
 /* Error exits */
